#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([redis_pool], [1.0], [waited])
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])

AC_ARG_WITH(
	config-path,
	[--with-config-path rs.ini's path],
	[AC_DEFINE_UNQUOTED(SERVER_CONFIG_PATH, "${withval}", [server ini path])]
)

AC_PREFIX_DEFAULT(../bin)
AC_SUBST(prefix)
	

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
# FIXME: Replace `main' with a function in `-levent':
AC_CHECK_LIB([event], [event_base_new], [], [AC_MSG_ERROR([libevent not valid])])
# FIXME: Replace `main' with a function in `-liniparser':
AC_CHECK_LIB([iniparser], [iniparser_load], [], [AC_MSG_ERROR([iniparser not valid])])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [ceil], [], [AC_MSG_ERROR([ceil not valid])])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [pthread_create], [], [AC_MSG_ERROR([pthread not valid])])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h unistd.h], [], [AC_MSG_ERROR([some important header not found])])

AC_CHECK_HEADERS([sys/signalfd.h])

AC_ARG_ENABLE(
	tcmalloc,
	[--enable-tcmalloc allow tcmalloc],
	[
		case "${enableval}" in
			yes)
				AC_CHECK_HEADERS([google/tcmalloc.h], [], [AC_MSG_ERROR([google/tcmalloc.h not found])])
				AC_DEFINE(USE_TCMALLOC, 1, [use tcmalloc])
				;;
			no)  ;;
			*)   AC_MSG_ERROR(bad value ${enableval} for --enable-tcmalloc);;
		esac
	]
)

AC_ARG_ENABLE(
	jemalloc,
	[--enable-jemalloc allow jemalloc],
	[
		case "${enableval}" in
			yes) 
				AC_CHECK_HEADERS([jemalloc/jemalloc.h], [], [AC_MSG_ERROR([jemalloc/jemalloc.h not found])])
				AC_DEFINE(USE_JEMALLOC, 1, [use jemalloc])
				;;
			no)  ;;
			*)   AC_MSG_ERROR(bad value ${enableval} for --enable-jemalloc);;
		esac
	]
)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([dup2 gettimeofday inet_ntoa memmove memset realpath socket strchr strdup strerror], [], [AC_MSG_ERROR([some important funcs not found])])

# AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile)
